# CppAssignments

Assignment2/: CMakeLists.txt  InputClassifier.cpp  InputClassifier.h  SequenceChecker.cpp  SequenceChecker.h  calculator.cpp  calculator.h  main.cpp  runner.cpp  runner.h
Assignment4/: CMakeLists.txt  README.md  main.cpp
Assignment4/head/: Matrix.h  matrixAlgorithmsUtil.h
Assignment4/report/: README.md
Assignment4/source/: Matrix.cpp  matrixAlgorithmsUtil.cpp
Project1/: CMakeLists.txt  README.md  main.cpp
Project1/head/: advancedMatrixProduct.h  generateRandomMatrix.h  matrix.h  plainMatrixProduct.h  strassen.h
Project1/src/: advancedMatrixProduct.cpp  generateRandomMatrix.cpp  plainMatrixProduct.cpp  strassen.cpp
Project2/: CMakeLists.txt  README.md  main.cpp
Project2/REPORT/: README.md
Project2/head/: ActivateFunction.h  Conv2D.h  ConvLayer.h  FullConnection.h  ImageReader.h  MaxPool.h  SoftMax.h  model.h
Project2/param/: face_binary_cls.cpp  face_binary_cls.h
Project2/source/: ActivateFunction.cpp  Conv2D.cpp  ConvLayer.cpp  FullConnection.cpp  ImageReader.cpp  MaxPool.cpp  SoftMax.cpp  model.cpp
Project2/test/: test.cpp  test.h
assignment3/: CMakeLists.txt  README.md
assignment3/files/: tst.txt
assignment3/head/: InputReader.h  concurrentDotProduct.h  plainDotProduct.h
assignment3/lib/pthreads-w32-2-9-1-release/QueueUserAPCEx/driver/: alertdrv.rc
assignment3/lib/pthreads-w32-2-9-1-release/QueueUserAPCEx/testapp/: QueueUserAPCEx.h  testapp.c
assignment3/lib/pthreads-w32-2-9-1-release/QueueUserAPCEx/user/: QueueUserAPCEx.h
assignment3/lib/pthreads-w32-2-9-1-release/pthreads.2/: implement.h
assignment3/lib/pthreads-w32-2-9-1-release/pthreads.2/tests/: test.h
assignment3/script/: File_gen.py  binary_file_write_script.cpp
assignment3/source/: InputReader.cpp  concurrentDotProduct.cpp  main.cpp  plainDotProduct.cpp
assignment3/test/: testMultiThreading.cpp  tst.cpp
